--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>toolkit</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>toolkit</title>
+    <meta name="google-signin-client_id" content="146062994371-0b8m93279mjre61gu2hseg6b904lirn3.apps.googleusercontent.com">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+    <!-- <meta name="google-signin-scope" content="profile email"> -->
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+    <script src="https://apis.google.com/js/api:client.js"></script>
   </head>
   <body>
     <div id="app"></div>
